# VLANeXt

./: DESIGN_SPACE.md  LICENSE  README.md  pyproject.toml
config/: droid_train_config.yaml  gpu_occupy.yaml  libero_bench_config.yaml  libero_plus_bench_config.yaml  libero_train_config.yaml
docs/: index.css  index.html  index.js
scripts/: train.py
src/datasets/: droid_act.py  droid_fixed.py  libero_act.py
src/evaluation/libero_bench/: VLANeXt_utils.py
src/models/: VLANeXt.py
