[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vlanext"
version = "0.1.0"
description = "VLANeXt: Recipes for Building Strong VLA Models"
readme = "README.md"
license = "LicenseRef-S-Lab-1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "diffusers>=0.25",
    "accelerate",
    "pillow>=9.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["src*"]
